--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -102,6 +102,11 @@
             <li class="mb-2">
               <i class="bi bi-lightning-charge text-warning me-2"></i>
               <strong>JavaScript:</strong> Stimulus + Turbo
+              <div data-controller="hello">
+                <input data-hello-target="name" type="text">
+                <button data-action="click->hello#greet">greet</button>
+                <div data-hello-target="result"></div>
+              </div>
             </li>
           </ul>
         </div>
